Fixed approvals modals UI and layout fixes along with home screen alignment fixes.

--- a/src/app/Product_Owner/components/header/header.component.scss
+++ b/src/app/Product_Owner/components/header/header.component.scss
@@ -46,7 +46,6 @@
 	margin: 0;
 	display: flex;
 	align-items: center;
-	gap: 5px;
 	
 	li {
 		margin: 8px 5px;
