--- a/src/app/Product_Owner/components/sidemenu/sidemenu.component.scss
+++ b/src/app/Product_Owner/components/sidemenu/sidemenu.component.scss
@@ -7,6 +7,8 @@
   justify-content: space-between;
   height: 100%;
   overflow-y: auto;
+  width: 146px;
+  padding-right: 8px;
   
   ul {
     list-style: none;
@@ -14,7 +16,7 @@
     margin: 0;
     li {
       text-align: center;
-      margin-bottom: 30px;
+      margin-bottom: 12px;
       transition: all 0.3s ease;
       
       &:hover {
@@ -121,6 +123,7 @@
 
 .sidemenu.collapsed {
   width: 60px;
+  padding-right: 0;
   ul li a span,
   .collapse-btn span,
   .logout-btn span {
